# fastapi-compose-prometheus

./: .dockerignore  .editorconfig  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  compose.yaml  conclusions.md  pyproject.toml  run_commands.md  streamer.py
app/: main.py
app/logging/: loki.py
app/models/: items.py  users.py
app/routers/: hello.py  items.py  metrics.py  users.py
monitoring/grafana/: Backend Stats-1714948300935.json  dashboard.json
monitoring/grafana/Exxon POC/: POC-1721848229733.json
monitoring/loki/: README.md
monitoring/prometheus/: README.md  metrics.rules.yml  prometheus.yml
